import java.util.Properties
import java.text.SimpleDateFormat
import java.util.Date

plugins {
    `java-library`
    `maven-publish`
    application
    id("com.gradleup.shadow") version "9.6.1"
    kotlin("jvm") version "2.4.10"
}

group = "top.yzljc"
version = "3.1.8-Release"
description = "AtriBot"

repositories {
    mavenLocal()
    maven {
        url = uri("https://repo.maven.apache.org/maven2/")
    }
    mavenCentral()
}

dependencies {
    api("io.javalin:javalin:6.6.0")
    api("org.jetbrains.kotlin:kotlin-stdlib:2.1.10")
    api("cn.dev33:sa-token-sign:1.45.0")
    api("com.google.guava:guava:33.6.0-jre")
    api("net.dankito.readability4j:readability4j:1.0.8")
    api("com.fasterxml.jackson.core:jackson-core:2.22.1")
    api("com.mysql:mysql-connector-j:9.7.0")
    api("org.yaml:snakeyaml:2.6")
    api("com.zaxxer:HikariCP:7.1.0")
    api("org.apache.commons:commons-text:1.15.0")
    api("org.jsoup:jsoup:1.22.2")
    api("com.fasterxml.jackson.core:jackson-databind:2.22.1")
    api("com.fasterxml.jackson.core:jackson-annotations:2.22")
    api("cn.6tail:lunar:1.7.7")
    api("org.java-websocket:Java-WebSocket:1.6.0")
    api("ch.qos.logback:logback-classic:1.6.0")
    api("com.github.stuxuhai:jpinyin:1.1.8")
    api("org.eclipse.angus:jakarta.mail:2.0.5")

    compileOnly("org.projectlombok:lombok:1.18.46")
    annotationProcessor("org.projectlombok:lombok:1.18.46")
}

tasks.withType<JavaCompile> {
    options.encoding = "UTF-8"
    options.compilerArgs.add("--enable-preview")
}

tasks.withType<Javadoc> {
    options.encoding = "UTF-8"
}

tasks.withType<JavaExec> {
    jvmArgs = listOf("--enable-preview")
}

val generateGitProperties by tasks.registering {
    val outputFile = layout.buildDirectory.file("generated/git/git.properties")
    outputs.file(outputFile)
    outputs.upToDateWhen { false }

    val projVersion = version.toString()

    doLast {
        val props = Properties()
        val sdf = SimpleDateFormat("yyyy-MM-dd HH:mm:ss z")
        props["git.build.time"] = sdf.format(Date())
        props["git.build.version"] = projVersion

        fun runGit(vararg args: String): String {
            return try {
                val process = ProcessBuilder("git", *args).start()
                val output = process.inputStream.bufferedReader().readText().trim()
                process.waitFor()
                if (process.exitValue() == 0 && output.isNotEmpty()) output else "unknown"
            } catch (_: Exception) {
                "unknown"
            }
        }

        props["git.commit.id.abbrev"] = runGit("rev-parse", "--short", "HEAD")
        props["git.commit.id.full"] = runGit("rev-parse", "HEAD")
        props["git.branch"] = runGit("rev-parse", "--abbrev-ref", "HEAD")

        val out = outputFile.get().asFile
        out.parentFile.mkdirs()
        out.writer(Charsets.UTF_8).use { props.store(it, "Generated by Gradle Native") }
    }
}

tasks.processResources {
    from(generateGitProperties)

    val nonFilteredExtensions = listOf("ttf", "woff", "woff2", "png", "jpg", "jpeg", "gif", "ico")
    val projVersion = project.version.toString()

    filesMatching("**/*") {
        val isBinary = nonFilteredExtensions.any { name.endsWith(".$it", ignoreCase = true) }
        val isGitProps = name == "git.properties"
        val isOfficialWebuiAsset = path.startsWith("official-webui/")

        if (!isBinary && !isGitProps && !isOfficialWebuiAsset) {
            expand(
                "version" to projVersion
            )
        }
    }
}

tasks.jar {
    archiveClassifier.set("plain")
}

tasks.shadowJar {
    archiveClassifier.set("")

    manifest {
        attributes("Main-Class" to "top.yzljc.atribot.Atri")
    }

    exclude("META-INF/*.SF", "META-INF/*.DSA", "META-INF/*.RSA")

    mergeServiceFiles()

    append("META-INF/org.slf4j.impl.StaticLoggerBinder")
}

tasks.build {
    dependsOn(tasks.shadowJar)
}

publishing {
    publications.create<MavenPublication>("maven") {
        from(components["java"])
    }
}

kotlin {
    jvmToolchain {
        languageVersion.set(JavaLanguageVersion.of(25))
    }
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(25))
    }
}